--- a/assets/stylesheets/css/style.css
+++ b/assets/stylesheets/css/style.css
@@ -111,6 +111,6 @@ body .container div.footer div.houses p {
   top: 100px;
   left: 100px;
   font-family: Monaco;
-  backgrond-color: red;
+  background-color: red;
   text-align: center;
 }
