--- a/assets/stylesheets/sass/partials/_global.sass
+++ b/assets/stylesheets/sass/partials/_global.sass
@@ -43,5 +43,5 @@ body
           top: 100px
           left: 100px
           font-family: Monaco
-          backgrond-color: red
+          background-color: red
           text-align: center
